# contract

./: CMakeLists.txt
cmake/: contract_utils.cmake
src/: CMakeLists.txt
src/abort/: CMakeLists.txt  abort.cpp
src/contract/: CMakeLists.txt
src/contract/include/contract/: base.hpp  contract.hpp
src/exception/: CMakeLists.txt  exception.cpp  violation.cpp
src/exception/include/contract/: exception.hpp
src/noop/: CMakeLists.txt  noop.cpp
src/switchable/: CMakeLists.txt  Switchable.cpp
src/switchable/include/contract/: switchable.hpp
