set(name contract_abort)
add_library(${name} STATIC abort.cpp)
target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${name} PUBLIC contract)
get_target_property(SOURCE_LIST ${name} SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})
configure_library(${name})
