set(exception_name contract_exception)
add_library(${exception_name} STATIC exception.cpp include/contract/exception.hpp)
target_include_directories(${exception_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${exception_name} PUBLIC contract)
get_target_property(SOURCE_LIST ${exception_name} SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})
configure_library(${exception_name})

set(violation_name contract_exception)
add_library(violation_name STATIC violation.cpp)
target_include_directories(violation_name PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(violation_name PUBLIC ${exception_name} contract)
get_target_property(SOURCE_LIST violation_name SOURCES)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})
configure_library(${violation_name})
